# routes/places-routes.js
@@ -1,4 +1,5 @@
 const express = require("express");
+const { check } = require("express-validator");
 
 const placesControllers = require("../controllers/places-controllers");
 
@@ -8,9 +9,21 @@ router.get("/:pid", placesControllers.getPlaceById);
 
 router.get("/user/:uid", placesControllers.getPlacesByUserId);
 
-router.post("/", placesControllers.createPlace);
+router.post(
+  "/newPlace",
+  [
+    check("title").not().isEmpty(),
+    check("description").isLength({ min: 5 }),
+    check("address").not().isEmpty(),
+  ],
+  placesControllers.createPlace
+);
 
-router.patch("/:pid", placesControllers.patchPlace);
+router.patch(
+  "/:pid",
+  [check("title").not().isEmpty(), check("description").isLength({ min: 5 })],
+  placesControllers.patchPlace
+);
 
 router.delete("/:pid", placesControllers.deletePlace);
 
